<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/dark">

    <LinearLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            style="@style/TextAppearance.App.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login_headline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label_email" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/TextAppearance.App.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/shape_bg_rounded_30"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="40dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textColorHint="@color/white_50" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.App.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label_password" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/TextAppearance.App.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/shape_bg_rounded_30"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:minHeight="40dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textColorHint="@color/white_50" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                style="@style/TextAppearance.App.Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text_no_account" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.ButtonSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/login_button_register" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/login_button_forgot_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="32dp"
            android:background="@color/stroke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVk"
                style="@style/Widget.App.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:backgroundTint="#2683ED"
                app:icon="@drawable/ic_vk" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                style="@style/Widget.App.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_bg_rounded_30_gradient"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_ok" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>